--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "mccmd",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mparchment.github.io/mccmd",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -29,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^5.0.0",
     "vite": "^4.4.5"
   }
 }
