--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^5.0.0",
+    "react-router-dom": "^6.14.2",
     "vite": "^4.4.5"
   }
 }
