--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.13.0",
     "prop-types": "^15.8.1",
