--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-slick": "^0.29.0",
+    "react-swipeable": "^7.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4"
   },
