--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,10 @@ jobs:
         env:
           VITE_FIREBASE_APIKEY: ${{ secrets.VITE_FIREBASE_APIKEY }}
           VITE_FIREBASE_AUTHDOMAIN: ${{ secrets.VITE_FIREBASE_AUTHDOMAIN }}
+          VITE_EMAILJS_SERVICEID: ${{ secrets.VITE_EMAILJS_SERVICEID }}
+          VITE_EMAILJS_DEFAULT_TEMPLATEID: ${{ secrets.VITE_EMAILJS_DEFAULT_TEMPLATEID }}
+          VITE_EMAILJS_IMAM_TEMPLATEID: ${{ secrets.VITE_EMAILJS_IMAM_TEMPLATEID }}
+          VITE_EMAILJS_PUBLICKEY: ${{ secrets.VITE_EMAILJS_PUBLICKEY }}
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
