--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,8 @@ jobs:
           VITE_EMAILJS_DEFAULT_TEMPLATEID: ${{ secrets.VITE_EMAILJS_DEFAULT_TEMPLATEID }}
           VITE_EMAILJS_IMAM_TEMPLATEID: ${{ secrets.VITE_EMAILJS_IMAM_TEMPLATEID }}
           VITE_EMAILJS_PUBLICKEY: ${{ secrets.VITE_EMAILJS_PUBLICKEY }}
+          VITE_EMAILJS_MCC_EMAIL: ${{ secrets.VITE_EMAILJS_MCC_EMAIL }}
+          VITE_EMAILJS_IMAM_EMAIL: ${{ secrets.VITE_EMAILJS_IMAM_EMAIL }}
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
