--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.1",
     "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
     "prop-types": "^15.8.1",
