--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.13.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
